Update annotaiton style

--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -5,13 +5,14 @@
 .annotations span { 
 	border: 1px solid #F26C4F; 
 	border-bottom-width: 2px; 
-	display: inline-block;
-	margin-bottom: 0px; 
+	display: inline-block;	
 	position: relative; 
 	background-color: #FDC68A;
 	border-radius: 3px;
-	padding: 3px 1px;
-	margin: 2px 1px; 
+	padding: 1px;
+	margin: 3px 1px; 
+	line-height: 100%;
+	vertical-align: middle;
 }
 
 xyz {
@@ -23,10 +24,7 @@ xyz {
 	position: relative;   
 }
 
-.annotations span span { 
-    margin: 2px 0; 
-    padding: 3px 1px;
-}
+.annotations span span { }
 
 /*relations  */
 span.relationAvailable{
@@ -46,10 +44,8 @@ span.hiddenAnnotation {
 span.token{
 	border:1px solid #eee !important;	
 	background: transparent;
-	line-height: 200%;
-	display: inline;
-	padding: 0;
 	vertical-align: middle;
+	display: inline-block;	
 }
 
 span.token:hover{
