Lemma autofill feature

--- a/public_html/css/page_report_annotation_lemma.css
+++ b/public_html/css/page_report_annotation_lemma.css
@@ -7,3 +7,5 @@ button#save_all { float: right; }
 .select2-container--default .select2-selection--single .select2-selection__placeholder { background: yellow; }
 
 #annotationLemmas table td { vertical-align: middle; }
+
+input.empty { background: yellow; }
