--- a/public_html/css/bootstrap_fix.css
+++ b/public_html/css/bootstrap_fix.css
@@ -1,6 +1,10 @@
 body { font-size: 12px; }
 h1 { font-size: 16px;}
 
+.alert-info a { color: brown; }
+
+/* Compact mode */
+/*------------------------------------------------------------------*/
 #page.compact .panel-heading { padding: 5px 10px; }
 #page.compact .panel-body { padding: 10px; }
 #page.compact .panel-footer { padding: 5px 10px; }
