pre-wrap for document content

--- a/public_html/css/page_report.css
+++ b/public_html/css/page_report.css
@@ -22,3 +22,7 @@ span.highlight { background: #ff9; }
 #annotationLemmas .lemma_status { text-align: center; }
 
 .contentBox, .contentBox h1, .contentBox h2, .contentBox h3 { }
+
+.contentBox {
+    white-space: pre-wrap;
+}
