Custom corpus css styles

--- a/public_html/css/page_corpus_settings.css
+++ b/public_html/css/page_corpus_settings.css
@@ -10,3 +10,9 @@
 }
 
 tr.hightlighted td.selected { background: #9DD943 !important; }
+
+#corpusElementsContainer th { width: 100px; text-align: right; }
+
+#corpusElementsContainer #cssValue { font-family: monospace; white-space: pre-wrap; }
+
+#basicInfoCss #corpusCss { width: 800px; height: 600px; }
